<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.qingmiao.qmdoctor.widget.IconFontTextview
                android:id="@+id/iv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:text="@string/icons_phone"
                android:textColor="@color/text"
                android:textSize="31dp" />

            <EditText
                android:inputType="phone"
                android:id="@+id/et_number"
                style="@style/login_et_style"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_me"
                android:hint="请输入手机号码"
                android:textSize="@dimen/tv_sview_title_detail" />
        </RelativeLayout>

        <View style="@style/line_style" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="52dp">

        <View style="@style/line_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <com.qingmiao.qmdoctor.widget.IconFontTextview
                android:id="@+id/iv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:text="@string/icons_pwd"
                android:textColor="@color/text"
                android:textSize="31dp" />

            <EditText
                android:id="@+id/etpassword"
                style="@style/login_et_style"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_pwd"
                android:hint="请输入密码"
                android:password="true"
                android:textSize="@dimen/tv_sview_title_detail" />

            <com.qingmiao.qmdoctor.widget.IconFontTextview
                android:id="@+id/iveye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="21dp"
                android:text="@string/icons_eye"
                android:textColor="@color/text"
                android:textSize="18dp" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/bnt_login_style"
        android:text="登录" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_register"
            style="@style/text_style"
            android:layout_marginLeft="21dp"
            android:text="注册账号" />

        <TextView
            android:id="@+id/tv_forget"
            style="@style/text_style"
            android:layout_alignParentRight="true"
            android:layout_marginRight="21dp"
            android:text="忘记密码?" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:text="还可以选择以下登录方式"
        android:textColor="@color/text"
        android:textSize="@dimen/tv_sview_data"
        android:id="@+id/textView2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.qingmiao.qmdoctor.widget.IconFontTextview
                android:id="@+id/login_iv_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="62dp"
                android:layout_centerHorizontal="true"
                android:text="@string/icons_wexin"
               />

            <TextView
                style="@style/login_number_style"
                android:layout_below="@id/login_iv_weixin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="微信账号登录" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.qingmiao.qmdoctor.widget.IconFontTextview
                android:id="@+id/login_iv_sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/red"
                android:text="@string/icons_sina"
               android:textSize="62dp"/>

            <TextView
                style="@style/login_number_style"
                android:layout_below="@id/login_iv_sina"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="新浪账号登录" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.qingmiao.qmdoctor.widget.IconFontTextview
                android:id="@+id/login_iv_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="62dp"
                android:textColor="@color/blue"
                android:text="@string/icons_qq"
                />

            <TextView
                style="@style/login_number_style"
                android:layout_below="@id/login_iv_qq"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="QQ账号登录" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
